rudy-db/tests/snapshots/method_discovery@small-2.snap
---
source: rust-debuginfo/tests/mod.rs
expression: methods
snapshot_kind: text
---
[
    DiscoveredMethod {
        name: "method_0",
        full_name: "small::TestStruct0::method_0",
        signature: "fn(self: &TestStruct0, param: i32) -> i32",
        address: 4294999328,
        self_type: Borrowed,
        parameter_count: 2,
        callable: true,
    },
]
