rudy-db/tests/snapshots/method_discovery@small-3.snap
---
source: rudy-db/tests/mod.rs
expression: methods
snapshot_kind: text
---
[
    DiscoveredMethod {
        name: "method_0",
        full_name: "small::TestStruct0::method_0",
        signature: "fn(self: &TestStruct0, param: i32) -> i32",
        address: 4295001484,
        self_type: Borrowed,
        callable: true,
    },
]
