rudy-db/tests/snapshots/method_discovery@x86_64-apple-darwin.snap
---
source: rudy-db/tests/static_tests.rs
expression: methods
snapshot_kind: text
---
[
    DiscoveredMethod {
        name: "new",
        full_name: "method_discovery::Session::new",
        signature: "fn new(_: _, _: _) -> _",
        address: 4294974112,
        self_type: None,
        callable: true,
    },
    DiscoveredMethod {
        name: "get_id",
        full_name: "method_discovery::Session::get_id",
        signature: "fn get_id(&self) -> _",
        address: 4294974160,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
    },
    DiscoveredMethod {
        name: "set_name",
        full_name: "method_discovery::Session::set_name",
        signature: "fn set_name(&mut self, _: _)",
        address: 4294974176,
        self_type: Some(
            BorrowedMut,
        ),
        callable: true,
    },
]
