rudy-db/tests/snapshots/method_discovery_current_platform-3.snap
---
source: rudy-db/tests/dynamic_tests.rs
expression: methods
snapshot_kind: text
---
[
    DiscoveredMethod {
        name: "is_expired",
        full_name: "lldb_demo::Session::is_expired",
        signature: "fn(self: &Session) -> bool",
        address: 4294986160,
        self_type: Borrowed,
        callable: true,
    },
]
