rudy-db/tests/snapshots/resolve_function@aarch64-apple-darwin-2.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "resolver.resolve_function(\"function_call\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::function_call",
        address: "0x1000009ec",
        params: [
            Variable {
                name: "x",
                value: None,
                ty: Some(
                    Type {
                        name: "u64",
                    },
                ),
            },
        ],
    },
)
