rudy-db/tests/snapshots/resolve_function@aarch64-apple-darwin.snap
---
source: rudy-db/tests/static_tests.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::main",
        address: "0x1000008c8",
        params: [],
    },
)
