rudy-db/tests/snapshots/resolve_function@aarch64-unknown-linux-gnu-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: "resolver.resolve_function(\"function_call\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::function_call",
        address: "0x6454",
        size: "0x68",
        params: [
            Variable {
                name: "x",
                value: None,
                ty: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die(
                        Id(21d3),
                    ),
                },
            },
        ],
    },
)
