rudy-db/tests/snapshots/resolve_function@aarch64-unknown-linux-gnu.snap
---
source: rudy-db/tests/static_tests.rs
expression: "resolver.find_function_by_name(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::main",
        address: "0x65c0",
        size: "0xa4",
        params: [],
    },
)
