rudy-db/tests/snapshots/resolve_function@x86_64-apple-darwin-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: "resolver.find_function_by_name(\"function_call\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::function_call",
        address: "0x1000009e0",
        size: "0x49",
        params: [
            Variable {
                name: "x",
                value: None,
                ty: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die at DebugFile { [salsa id]: Id(c07) } 0x000000c6,
                },
            },
        ],
    },
)
