rudy-db/tests/snapshots/resolve_function@x86_64-apple-darwin.snap
---
source: rudy-db/tests/static_tests.rs
expression: "resolver.find_function_by_name(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedFunction {
        name: "simple_test::main",
        address: "0x100000950",
        size: "0xab",
        params: [],
    },
)
